# xLLM

./: .coderabbit.yaml  .commitlintrc.json  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  GEMINI.md  LICENSE  README.ja.md  README.md  build_cuda.bat  build_cuda_release.bat  package.json  pnpm-lock.yaml
.claude/: README.md  settings.json
.claude/commands/: cancel-ralph.md  e2e.dashboard.md  e2e.full.md  e2e.playground.md  help.md  hotfix.md  ralph-loop.md  release.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.claude/hooks/: block-cd-command.sh  block-git-branch-ops.sh  block-quality-checks-in-task.sh
.github/workflows/: ci.yml  e2e-real-models.yml  test.yml
.husky/: commit-msg  pre-commit  pre-push
.specify/: .current-feature  .gitignore
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
docs/migrations/: plugin-to-manager.md
engines/safetensors/: safetensors_engine.cpp  safetensors_engine.h
engines/safetensors.cpp/: CMakeLists.txt  LICENSE
include/api/: audio_endpoints.h  http_server.h  image_endpoints.h  node_endpoints.h  openai_endpoints.h
include/cli/: cli_client.h  commands.h  ollama_compat.h  progress_renderer.h  repl_session.h
include/core/: audio_manager.h  chat_template_renderer.h  continuous_batch_scheduler.h  engine.h  engine_error.h  engine_registry.h  engine_types.h  function_calling.h  harmony_utils.h  image_manager.h  inference_cache.h  inference_engine.h  kv_cache_utils.h  llama_engine.h  llama_manager.h  lora_utils.h  model_pool.h  onnx_tts_manager.h  partial_load_guard.h  prefix_cache.h  replica_manager.h  request_watchdog.h  sd_manager.h  text_manager.h  token_watchdog.h  vision_processor.h  whisper_manager.h
include/metrics/: metrics_state.h  prometheus_exporter.h
include/models/: model_converter.h  model_descriptor.h  model_downloader.h  model_registry.h  model_resolver.h  model_storage.h  model_sync.h  modelfile.h  supported_models_json.h
include/runtime/: state.h
include/system/: gpu_detector.h  resource_monitor.h  tensor_parallelism.h
include/utils/: allowlist.h  cli.h  config.h  file_lock.h  json_utils.h  logger.h  pgp.h  request_id.h  sha256.h  stop_sequences.h  system_info.h  url_encode.h  utf8.h  version.h
poc/gpt-oss-cuda/: README.md  request.json  run.sh
poc/gpt-oss-metal/: README.md  messages.json  run.sh
poc/gpu-detection/: Cargo.toml  README.md
poc/nemotron-cuda-cpp/: CMakeLists.txt  README.md  build.bat  build_ps.ps1  run_test.ps1
poc/nemotron-cuda-cpp/include/: config.h  cuda_memory.h  cuda_utils.h  inference.h  kernels.h  model_config.h  safetensors_loader.h  tokenizer.h  transformer.h
poc/nemotron-cuda-cpp/src/: cuda_memory.cu  inference.cpp  main.cpp  model_config.cpp  safetensors_loader.cpp  tokenizer.cpp  transformer.cu
poc/nemotron-cuda-cpp/src/kernels/: attention.cu  embedding.cu  rms_norm.cu  silu.cu  softmax.cu
scripts/: check-task-prerequisites.sh  cleanup-roslyn-assets.sh  common.sh  create-new-feature.sh  entrypoint.sh  load-test.sh  prepare-release.sh  publish.sh  run-local-tests.sh  setup-plan.sh  update-assistant-context.sh
scripts/benchmarks/: chat.lua  chat_anthropic.lua  chat_google.lua  chat_openai.lua  plot_csv.py  run_wrk.sh  summarize_csv.py  wrk_parse.py
scripts/release/: create-hotfix.sh
scripts/semantic-release/: prepare.sh  success.sh
specs/: reference-models.md
specs/SPEC-1a74455c/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/SPEC-1dbf2acb/: plan.md  spec.md  tasks.md
specs/SPEC-48678000/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/SPEC-69549000/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/SPEC-93536000/: data-model.md  plan.md  spec.md  tasks.md
specs/SPEC-a7e6d40a/: data-model.md  plan.md  quickstart.md  (+3 more)
src/: main.cpp
templates/: assistant-file-template.md  plan-template.md  spec-template.md  tasks-template.md
tests/: CMakeLists.txt  test_main.cpp  win_compat.h
tests/contract/: CMakeLists.txt  audio_speech_stream_test.cpp  cli_benchmark_test.cpp  cli_compare_test.cpp  cli_convert_test.cpp  cli_export_import_test.cpp  cli_list_test.cpp  cli_profile_test.cpp  cli_ps_test.cpp  cli_pull_test.cpp  cli_rm_test.cpp  cli_run_test.cpp  cli_serve_test.cpp  cli_show_test.cpp  cli_stop_test.cpp  image_url_test.cpp  openai_api_test.cpp
tests/e2e/real_models/: run.sh
tests/integration/: CMakeLists.txt  audio_speech_stream_integration_test.cpp  cli_model_lifecycle_test.cpp  cli_pull_list_test.cpp  cli_repl_test.cpp  cli_server_test.cpp  http_features_test.cpp  http_server_test.cpp  image_url_integration_test.cpp  kv_cache_persistence_test.cpp  main_test.cpp  model_lifecycle_test.cpp  model_sync_download_test.cpp  modelfile_integration_test.cpp  node_endpoints_test.cpp  node_prometheus_test.cpp  openai_endpoints_test.cpp  speculative_decoding_perf_test.cpp  text_manager_integration_test.cpp  vram_lru_evict_test.cpp
tests/unit/: CMakeLists.txt  cli_test.cpp  continuous_batch_scheduler_test.cpp  engine_registry_reload_test.cpp  engine_registry_test.cpp  function_calling_test.cpp  gpu_detector_test.cpp  inference_cache_test.cpp  inference_engine_test.cpp  kv_cache_utils_test.cpp  llama_engine_kv_cache_test.cpp  llama_manager_test.cpp  logger_rotation_test.cpp  lora_utils_test.cpp  model_converter_test.cpp  model_downloader_http_test.cpp  model_downloader_test.cpp  model_loader_test.cpp  model_pool_test.cpp  model_registry_test.cpp  model_resolver_test.cpp  model_storage_test.cpp  model_sync_test.cpp  modelfile_test.cpp  ollama_compat_test.cpp  onnx_tts_manager_test.cpp  partial_load_guard_test.cpp  pgp_verify_test.cpp  prefix_cache_test.cpp  progress_renderer_test.cpp  repl_session_test.cpp  replica_manager_test.cpp  request_guard_test.cpp  resource_monitor_test.cpp  sd_manager_test.cpp  tensor_parallelism_test.cpp  text_manager_test.cpp  utils_config_test.cpp  utils_misc_test.cpp  utils_utf8_test.cpp  (+3 more)
(+186 files in other folders)
