set(INTEGRATION_TEST_SOURCES
    http_server_test.cpp
    openai_endpoints_test.cpp
    node_endpoints_test.cpp
    node_prometheus_test.cpp
    modelfile_integration_test.cpp
    main_test.cpp
    model_sync_download_test.cpp
    model_lifecycle_test.cpp
    cli_pull_list_test.cpp
    cli_repl_test.cpp
    cli_model_lifecycle_test.cpp
    cli_server_test.cpp
    text_manager_integration_test.cpp
    vram_lru_evict_test.cpp
    audio_speech_stream_integration_test.cpp
    image_url_integration_test.cpp
    speculative_decoding_perf_test.cpp
    kv_cache_persistence_test.cpp
    http_features_test.cpp
    ../../src/main.cpp
    ../../src/runtime/state.cpp
    ../../src/api/http_server.cpp
    ../../src/api/openai_endpoints.cpp
    ../../src/api/node_endpoints.cpp
    ../../src/api/audio_endpoints.cpp
    ../../src/api/image_endpoints.cpp
    ../../src/utils/pgp.cpp
    ../../src/models/model_registry.cpp
    ../../src/models/modelfile.cpp
    ../../src/models/model_sync.cpp
    ../../src/models/model_downloader.cpp
    ../../src/models/model_storage.cpp
    ../../src/models/model_resolver.cpp
    ../../src/metrics/metrics_state.cpp
    ../../src/metrics/prometheus_exporter.cpp
    ../../src/core/engine_registry.cpp
    ../../src/core/lora_utils.cpp
    ../../src/core/chat_template_renderer.cpp
    ../../src/core/llama_engine.cpp
    ../../src/core/kv_cache_utils.cpp
    ../../src/core/inference_engine.cpp
    ../../src/core/text_manager.cpp
    ../../src/core/request_watchdog.cpp
    ../../src/core/token_watchdog.cpp
    ../../src/core/vision_processor.cpp
    ../../src/core/llama_manager.cpp
    ../../src/core/whisper_manager.cpp
    ../../src/core/onnx_tts_manager.cpp
    ../../src/core/sd_manager.cpp
)

# Use platform-specific gpu_detector source
if(APPLE)
    list(APPEND INTEGRATION_TEST_SOURCES ../../src/system/gpu_detector.mm)
    list(APPEND INTEGRATION_TEST_SOURCES ../../src/system/resource_monitor.mm)
else()
    list(APPEND INTEGRATION_TEST_SOURCES ../../src/system/gpu_detector.cpp)
    list(APPEND INTEGRATION_TEST_SOURCES ../../src/system/resource_monitor.cpp)
endif()

add_executable(xllm-integration-tests
    ${INTEGRATION_TEST_SOURCES}
)

target_link_libraries(xllm-integration-tests
    PRIVATE
        test_common
        llama
        mtmd
        common
        nlohmann_json::nlohmann_json
        utils_lib
        cli_lib
        OpenSSL::SSL
        OpenSSL::Crypto
        ZLIB::ZLIB
)

# Ensure whisper/sd/onnx manager implementations are linked when enabled
if(BUILD_WITH_WHISPER)
    target_link_libraries(xllm-integration-tests PRIVATE whisper)
endif()
if(BUILD_WITH_SD)
    target_link_libraries(xllm-integration-tests PRIVATE stable-diffusion)
endif()
if(BUILD_WITH_ONNX)
    target_link_libraries(xllm-integration-tests PRIVATE onnxruntime::onnxruntime)
endif()

# Link Metal frameworks on macOS
if(APPLE)
    find_library(METAL_FRAMEWORK Metal)
    find_library(FOUNDATION_FRAMEWORK Foundation)
    if(METAL_FRAMEWORK AND FOUNDATION_FRAMEWORK)
        target_link_libraries(xllm-integration-tests PRIVATE ${METAL_FRAMEWORK} ${FOUNDATION_FRAMEWORK})
        target_compile_definitions(xllm-integration-tests PRIVATE USE_METAL=1)
    endif()

endif()

target_include_directories(xllm-integration-tests
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/../../include
        ${CMAKE_CURRENT_SOURCE_DIR}/../../src
)

target_compile_definitions(xllm-integration-tests
    PRIVATE
        XLLM_TESTING=1
)

if(BUILD_WITH_WHISPER)
    target_compile_definitions(xllm-integration-tests PRIVATE USE_WHISPER=1)
endif()
if(BUILD_WITH_SD)
    target_compile_definitions(xllm-integration-tests PRIVATE USE_SD=1)
endif()

add_test(
    NAME xllm-integration-tests
    COMMAND xllm-integration-tests
)
